; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/regex/extr_regcomp.c_freelacons.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/regex/extr_regcomp.c_freelacons.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.subre = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.subre*, i32)* @freelacons to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @freelacons(%struct.subre* %0, i32 %1) #0 {
  %3 = alloca %struct.subre*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.subre*, align 8
  %6 = alloca i32, align 4
  store %struct.subre* %0, %struct.subre** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = icmp sgt i32 %7, 0
  %9 = zext i1 %8 to i32
  %10 = call i32 @assert(i32 %9)
  %11 = load %struct.subre*, %struct.subre** %3, align 8
  %12 = getelementptr inbounds %struct.subre, %struct.subre* %11, i64 1
  store %struct.subre* %12, %struct.subre** %5, align 8
  %13 = load i32, i32* %4, align 4
  %14 = sub nsw i32 %13, 1
  store i32 %14, i32* %6, align 4
  br label %15

15:                                               ; preds = %29, %2
  %16 = load i32, i32* %6, align 4
  %17 = icmp sgt i32 %16, 0
  br i1 %17, label %18, label %34

18:                                               ; preds = %15
  %19 = load %struct.subre*, %struct.subre** %5, align 8
  %20 = getelementptr inbounds %struct.subre, %struct.subre* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @NULLCNFA(i32 %21)
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %28, label %24

24:                                               ; preds = %18
  %25 = load %struct.subre*, %struct.subre** %5, align 8
  %26 = getelementptr inbounds %struct.subre, %struct.subre* %25, i32 0, i32 0
  %27 = call i32 @freecnfa(i32* %26)
  br label %28

28:                                               ; preds = %24, %18
  br label %29

29:                                               ; preds = %28
  %30 = load %struct.subre*, %struct.subre** %5, align 8
  %31 = getelementptr inbounds %struct.subre, %struct.subre* %30, i32 1
  store %struct.subre* %31, %struct.subre** %5, align 8
  %32 = load i32, i32* %6, align 4
  %33 = add nsw i32 %32, -1
  store i32 %33, i32* %6, align 4
  br label %15

34:                                               ; preds = %15
  %35 = load %struct.subre*, %struct.subre** %3, align 8
  %36 = call i32 @FREE(%struct.subre* %35)
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @NULLCNFA(i32) #1

declare dso_local i32 @freecnfa(i32*) #1

declare dso_local i32 @FREE(%struct.subre*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
